Fixed subresults wrapping on the page in long lists.

--- a/upsilon-web/src/main/php/resources/stylesheets/main.css
+++ b/upsilon-web/src/main/php/resources/stylesheets/main.css
@@ -101,9 +101,14 @@ ul.metricList > li:last-child {
 	border: 1px dashed black;
 }
 
+.metricIndicatorContainer {
+	display: inline-block;
+}
+
 .metricText {
 	display: inline-block;	
 	vertical-align: top;
+	width: 85%;
 }
 
 .metricDetail {
